samples/_failures_safe/1761283010_47b4f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57b437c3.c: In function ‘main’:
./samples/SAFE/__tmp_57b437c3.c:158:16: error: missing terminating " character
  158 |         printf("Invalid input\n
      |                ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_57b437c3.c:158:9: error: expected expression at end of input
  158 |         printf("Invalid input\n
      |         ^~~~~~
./samples/SAFE/__tmp_57b437c3.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_57b437c3.c:158:9: error: expected declaration or statement at end of input
